# fuzzyABM

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  c_params.py  fuzzymodel_4.docx  mesh.txt  monitor.py  observations.json
ABC_B_1/: box_plot..html  c_params.py  distances.txt  medians.json  param_sets.json  posterior.json  priors.json  samples.txt  top_fitness.txt  top_ind.txt  top_param_sets.json  top_results.json
ABC_H_1/: barplot_liveCellCount_H2017_Mg0.html  barplot_liveCellCount_H2017_Mg12.html  barplot_liveCellCount_H2017_Mg3.html  barplot_liveCellCount_H2017_Mg6.html  barplot_liveCellCount_H2017_Mg60.html  barplot_viability_H2017_Mg0.html  barplot_viability_H2017_Mg12.html  barplot_viability_H2017_Mg3.html  barplot_viability_H2017_Mg6.html  barplot_viability_H2017_Mg60.html  box_plot.html  c_params.py  c_params_.py  distances.txt  medians.json  param_sets.json  posterior.json  priors.json  samples.txt  top_fitness.txt  top_ind.txt  top_param_sets.json  top_results.json
ABC_H_2/: c_params.py  distances.txt  medians.json  param_sets.json  posterior.json  priors.json  samples.txt  top_fitness.txt  top_ind.txt  top_param_sets.json  top_results.json
B/: c_params.py
B/ABC_B_1/: best_distances.txt  c_params.py  distances.txt  levene.json  medians.json  param_sets.json  posterior.json  priors.json  samples.txt  top_ind.txt  top_param_sets.json  top_results.json
B/ABC_B_2/: best_distances.txt  c_params.py  distances.txt  levene.json  medians.json  param_sets.json  posterior.json  priors.json  samples.txt  top_ind.txt  top_param_sets.json  top_results.json
B/ABC_B_3/: best_distances.txt  c_params.py  distances.txt  levene.json  medians.json  param_sets.json  posterior.json  priors.json  samples.txt  top_ind.txt  top_param_sets.json  top_results.json
B/ABC_B_4/: best_distances.txt  c_params.py  distances.txt  levene.json  medians.json  param_sets.json  posterior.json  priors.json  samples.txt  top_ind.txt  top_param_sets.json  top_results.json
B/ABC_B_5/: best_distances.txt  c_params.py  distances.txt  levene.json  medians.json  param_sets.json  posterior.json  priors.json  samples.txt  top_ind.txt  top_param_sets.json  top_results.json
B/ABC_B_6/: best_distances.txt  c_params.py  distances.txt  levene.json  medians.json  param_sets.json  posterior.json  priors.json  samples.txt  top_ind.txt  top_param_sets.json  top_results.json
B/ABC_B_7/: best_distances.txt  c_params.py  distances.txt  levene.json  medians.json  param_sets.json  posterior.json  priors.json  samples.txt  top_ind.txt  top_param_sets.json  top_results.json
B/ABC_B_8/: best_distances.txt  (+10 more)
Ber/: c_params.py
Helvia/: c_params.py
SA_B_1/: PTTS.json  distances.txt
SA_H_1/: PTTS.json  c_params.py  distances.txt  lower_bounds.json  param_sets.json
SA_H_2/: PTTS.json  c_params.py  distances.txt  lower_bounds.json  param_sets.json
app/: CMakeLists.txt  main.cpp
binds/: CMakeLists.txt  myBinds.cpp  mybinds.cpp
bio_data/: observations.json  observations.py
edata/: observations.json  observations.py
outputs_ber/: barplot_ALP_B2016_C.html  barplot_ALP_B2016_M.html  barplot_DNA_B2016_C.html  barplot_DNA_B2016_M.html  barplot_OC_B2016_C.html  barplot_OC_B2016_M.html  barplot_viability_B2016_C.html  barplot_viability_B2016_M.html  box_plot.html  distances.txt  medians.json  param_sets.json  posterior.json  priors.json  samples.txt  top_fitness.txt  top_ind.txt  top_param_sets.json  top_results.json
outputs_helvia/: barplot_liveCellCount_H2017_Mg0.html  barplot_liveCellCount_H2017_Mg12.html  barplot_liveCellCount_H2017_Mg3.html  barplot_liveCellCount_H2017_Mg6.html  barplot_liveCellCount_H2017_Mg60.html  barplot_viability_H2017_Mg0.html  barplot_viability_H2017_Mg12.html  barplot_viability_H2017_Mg3.html  barplot_viability_H2017_Mg6.html  barplot_viability_H2017_Mg60.html  box_plot.html  distances.txt  medians.json  param_sets.json  posterior.json  priors.json  samples.txt  top_fitness.txt  top_ind.txt  top_param_sets.json  top_results.json
parameters/: free_params.py  parameters.py  params.py
scripts/: ABM_test.py  SA.py  agents.py  diffusion.py  env.py  free_params.py  fuzzy_plot.py  fuzzy_test.py  general_plot.py  imports.py  mesh.txt  monitor.py  params.json  params.py  patch.py  settings.json  single_run.py  test.py  trainingdata (copy 1).json  trainingdata.json  trainingdata.py  trainingdata_copy.json  trainingdata_helvia.json  visualize.py
src/: CMakeLists.txt  model.cpp  myPyBases.cpp  mypybases.cpp
src/ABM/: CMakeLists.txt  model.cpp  mypybases.cpp
src/diffusion/: CMakeLists.txt  diffusion.cpp
src/fuzzy/: CMakeLists.txt  fuzzy.cpp
src/fuzzylite/: CMakeLists.txt
tests/: CMakeLists.txt
tests/fuzzytests/: CMakeLists.txt  testfuzzy.cpp
(+764 files in other folders)
